--- a/index.html
+++ b/index.html
@@ -2023,26 +2023,52 @@
 				justify-content: space-between;
 			}
 
+			.mobile-version-justify img {
+				height: 100%;
+				width: auto;
+			}
+
+			.mobile-version-justify:nth-child(1) {
+				height: 45px;
+			}
+
 			.mobile-version-justify:nth-child(2) {
+				height: 30px;
 				margin-top: 35px;
 			}
 
 			.mobile-version-justify:nth-child(3) {
-				margin-top: 25px;
+				margin-top: 35px;
+				height: 52px;
 			}
 
-			.mobile-version-justify:nth-child(3) {
+			.mobile-version-justify:nth-child(4) {
 				margin-top: 35px;
+				width: 100%;
+				height: auto;
+			}
+
+			.mobile-version-justify:nth-child(4) img {
+				width: 100%;
+				height: 100%;
 			}
 
 			.mobile-version-footer {
 				display: flex;
 				margin-top: auto;
+				height: 130px;
+			}
+
+			.mobile-version-footer img {
+				height: 100%;
+				width: auto;
 			}
 
 			.mobile-version-footer-fill {
 				flex: 1;
 				background-image: url("/gmail/images/mobile/footerFill.jpg");
+				background-size: auto 100%;
+				background-repeat: repeat-x;
 			}
 		}
 	</style>
@@ -4549,7 +4575,7 @@
 			<img src="/gmail/images/mobile/name2.jpg" />
 		</div>
 		<div class="mobile-version-justify">
-			<img src="/gmail/images/mobile/main.jpg" />
+			<img class="mobile-version-main" src="images/mobile/main.jpg" />
 		</div>
 		<div class="mobile-version-footer">
 			<img src="/gmail/images/mobile/footer.jpg" />
