--- a/index.html
+++ b/index.html
@@ -4575,7 +4575,7 @@
 			<img src="/gmail/images/mobile/name2.jpg" />
 		</div>
 		<div class="mobile-version-justify">
-			<img class="mobile-version-main" src="images/mobile/main.jpg" />
+			<img class="mobile-version-main" src="/gmail/images/mobile/main.jpg" />
 		</div>
 		<div class="mobile-version-footer">
 			<img src="/gmail/images/mobile/footer.jpg" />
