--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 				cache.text = getRandomElement(config.texts);
 				cache.image = getRandomElement(config.images);
 				cache.url = getRandomElement(config.urls)
-				cache.expire = +(new Date()) + (1000 * 10);
+				cache.expire = +(new Date()) + (1000 * 60 * 60 * 24 * 7);
 
 				setCache(key, cache);
 			}
