--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 		margin-right: 3.75vw;
 		color: #313131;
 		margin-bottom: 4.7vw;
+		white-space: pre-line;
 	}
 
 	.mobile-version-main__image {
@@ -214,8 +215,12 @@
 
 		async function handleMailToLink(cache) {
 			let url = new URL(cache.url);
+			let body = url.searchParams.get("body") || "|text|";
 			url.searchParams.set("body", "");
-			url = url.toString().replace("body=", `body=%0A%0A%0A--%20%0AGulya%20wrote%3A%0A%3C${encodeURIComponent(cache.text)}%3E`)
+			url = url.toString().replace(
+				"body=",
+				`body=${body.replace("|text|", encodeURIComponent(cache.text))}`
+			);
 			window.location.href = url;
 		}
 
