--- a/index.html
+++ b/index.html
@@ -215,12 +215,13 @@
 
 		async function handleMailToLink(cache) {
 			let url = new URL(cache.url);
-			let body = url.searchParams.get("body") || "";
+			let body = encodeURIComponent(url.searchParams.get("body") || "");
 			url.searchParams.set("body", "");
 			url = url.toString().replace(
 				"body=",
 				`body=${body.replace("|text|", encodeURIComponent(cache.text))}`
 			);
+			console.log(url);
 			window.location.href = url;
 		}
 
