add border for just now

--- a/messages.html
+++ b/messages.html
@@ -139,6 +139,9 @@
   .message.new .message-date {
     color: #1d1d1d;
     font-weight: 500;
+    padding: 3px;
+    border-radius: 6px;
+    border: 1px solid #efedf1;
   }
 
   .message-title {
